--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ django-floppyforms==1.2.0
 django-model-utils==2.2
 django-secure==1.0
 docutils==0.12
+feedparser==5.1.3
 oauthlib==0.6.3
 psycopg2==2.5.4
 python3-openid==3.0.4
