--- a/requirements.txt
+++ b/requirements.txt
@@ -20,13 +20,16 @@ django-debug-toolbar==1.2.1
 django-floppyforms==1.2.0
 django-model-utils==2.2
 django-secure==1.0
+django-user-accounts==1.0
 docutils==0.12
 feedparser==5.1.3
 oauthlib==0.6.3
 psycopg2==2.5.4
 python3-openid==3.0.4
+pytz==2014.7
 requests==2.4.1
 requests-oauthlib==0.4.1
 six==1.8.0
 sqlparse==0.1.12
 unicode-slugify==0.1.1
+xmltodict==0.9.0
