--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,6 @@ Sphinx==1.2.3
 binaryornot==0.3.0
 coverage==3.7.1
 dj-database-url==0.3.0
-django-allauth==0.18.0
 django-appconf==0.6
 django-autoslug==1.7.2
 django-avatar==2.0
@@ -20,11 +19,11 @@ django-debug-toolbar==1.2.1
 django-floppyforms==1.2.0
 django-model-utils==2.2
 django-secure==1.0
-django-user-accounts==1.0
 docutils==0.12
 feedparser==5.1.3
 oauthlib==0.6.3
 psycopg2==2.5.4
+pyflakes==0.8.1
 python3-openid==3.0.4
 pytz==2014.7
 requests==2.4.1
