--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-Django==1.7
+Django==1.7.1
 Jinja2==2.7.3
 MarkupSafe==0.23
 Pillow==2.5.3
@@ -18,6 +18,7 @@ django-crispy-forms==1.4.0
 django-debug-toolbar==1.2.1
 django-floppyforms==1.2.0
 django-model-utils==2.2
+django-registration-redux==1.1
 django-secure==1.0
 docutils==0.12
 feedparser==5.1.3
