--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ django-configurations==0.8
 django-crispy-forms==1.4.0
 django-debug-toolbar==1.2.1
 django-floppyforms==1.2.0
+django-leaflet==0.15.2
 django-model-utils==2.2
 django-registration-redux==1.1
 django-secure==1.0
