--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Django==1.7.1
 Jinja2==2.7.3
 MarkupSafe==0.23
 Pillow==2.5.3
+PyJWT==0.4.1
 PyYAML==3.11
 Pygments==1.6
 Sphinx==1.2.3
@@ -26,10 +27,11 @@ feedparser==5.1.3
 oauthlib==0.6.3
 psycopg2==2.5.4
 pyflakes==0.8.1
+python-social-auth==0.2.1
 python3-openid==3.0.4
 pytz==2014.7
 requests==2.4.1
-requests-oauthlib==0.4.1
+requests-oauthlib==0.3.1
 six==1.8.0
 sqlparse==0.1.12
 unicode-slugify==0.1.1
