--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ django-braces==1.4.0
 django-cache-url==0.8.0
 django-configurations==0.8
 django-crispy-forms==1.4.0
+django-date-extensions==1.0.0
 django-debug-toolbar==1.2.1
 django-floppyforms==1.2.0
 django-leaflet==0.15.2
